@@ -46,6 +46,7 @@
 
 #include <nuttx/irq.h>
 #include <nuttx/arch.h>
+#include <nuttx/fs/fs.h>
 #include <nuttx/input/ajoystick.h>
 
 #include "sam_pio.h"
@@ -94,10 +95,6 @@
                         AJOY_BUTTON_7_BIT )
 
 /****************************************************************************
- * Private Types
- ****************************************************************************/
-
-/****************************************************************************
  * Private Function Prototypes
  ****************************************************************************/
 
@@ -141,9 +138,9 @@ static const struct ajoy_lowerhalf_s g_ajoylower =
   .al_enable     = ajoy_enable,
 };
 
-/* Descriptor for the open ADC driver */
+/* Thread-independent file structure for the open ADC driver */
 
-static int g_adcfd = -1;
+static struct file g_adcfile;
 
 /* Current interrupt handler and argument */
 
@@ -190,7 +187,7 @@ static int ajoy_sample(FAR const struct ajoy_lowerhalf_s *lower,
    * channels are enabled).
    */
 
-  nread = read(g_adcfd, adcmsg, SAM_ADC_NCHANNELS * sizeof(struct adc_msg_s));
+  nread = file_read(&g_adcfile, adcmsg, MAX_ADC_CHANNELS * sizeof(struct adc_msg_s));
   if (nread < 0)
     {
       int errcode = get_errno();
@@ -405,6 +402,7 @@ static int ajoy_interrupt(int irq, FAR void *context)
 int sam_ajoy_initialization(void)
 {
   int ret;
+  int fd;
   int i;
 
   /* Initialize ADC.  We will need this to read the ADC inputs */
@@ -416,17 +414,26 @@ int sam_ajoy_initialization(void)
       return ret;
     }
 
-  /* Open the ADC driver for reading.
-   * REVISIT:  This can't work!  The file descriptor is only valid in the
-   * task that opened the file.  Not useful for a sharable driver.
-   */
+  /* Open the ADC driver for reading. */
 
-  g_adcfd = open("/dev/adc0", O_RDONLY);
-  if (g_adcfd < 0)
+  fd = open("/dev/adc0", O_RDONLY);
+  if (fd < 0)
     {
       int errcode = get_errno();
       idbg("ERROR: Failed to open /dev/adc0: %d\n", errcode);
       return -errcode;
+    }
+
+  /* Detach the file structure from the file descriptor so that it can be
+   * used on any thread.
+   */
+
+  ret = file_detach(fd, &g_adcfile);
+  if (ret < 0)
+    {
+      idbg("ERROR: Failed to detach from file descriptor: %d\n", ret);
+      (void)close(fd);
+      return ret;
     }
 
   /* Configure the GPIO pins as interrupting inputs. */
@@ -452,8 +459,7 @@ int sam_ajoy_initialization(void)
   if (ret < 0)
     {
       idbg("ERROR: ajoy_register failed: %d\n", ret);
-      close(g_adcfd);
-      g_adcfd = -1;
+      file_close_detached(&g_adcfile);
     }
 
   return ret;
