@@ -39,7 +39,7 @@ ifneq ($(CONFIG_NFILE_DESCRIPTORS),0)
 
 CSRCS += fs_files.c fs_foreachinode.c fs_inode.c fs_inodeaddref.c
 CSRCS += fs_inodebasename.c fs_inodefind.c fs_inoderelease.c
-CSRCS += fs_inoderemove.c fs_inodereserve.c
+CSRCS += fs_inoderemove.c fs_inodereserve.c fs_filedetach.c
 
 # Include inode/utils build support
 
